--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,6 @@ baseline_model
 *.pyc
 model.weights.data-00000-of-00001
 log.txt
+/ms_marco_eval/sample_test_data/train_ground_truth.json
+/ms_marco_eval/sample_test_data/train_preds_json.json
+/ms_marco_eval/sample_test_data/train_preds_json2.json
