--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,13 @@
 .DS_Store
 /data
 /download
+./data
+./download
+data
+download
+/ms_marco_eval/sample_test_data/
+./ms_marco_eval/sample_test_data/
+ms_marco_eval/sample_test_data/
 model_save
 baseline_model
 *.pyc
