but lets not get too crazy now there fella

--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,4 @@ log.txt
 /ms_marco_eval/sample_test_data/train_ground_truth.json
 /ms_marco_eval/sample_test_data/train_preds_json.json
 /ms_marco_eval/sample_test_data/train_preds_json2.json
+/tsboard
